.apollo/crashes/crash-2023-09-17 04_25_10.log
NodeJS version: v18.16.1
NPM version: 9.5.1
Yarn version: 22.19
Git version: 2.39.2
Discord.js version: 14.13.0
customer@sparkedhost:~# if [[ -d .git ]]; then git pull; fi; if [[ ! -z ${NODE_PACKAGES} ]]; then npm install ${NODE_PACKAGES}; fi; if [ -f /home/container/package.json ]; then npm install --production; fi; node /home/container/${STARTUP_FILE}
[?25l[[100;90m..................[0m] | idealTree: [7msill[0m [35mlogfile[0m start cleaning logs, removing 1[0m[K[[100;90m..................[0m] | idealTree:container: [7msill[0m [35midealTree[0m buildDeps[0m[K[[100;90m..................[0m] | idealTree:container: [7msill[0m [35midealTree[0m buildDeps[0m[K[[100;90m..................[0m] / idealTree:container: [7msill[0m [35midealTree[0m buildDeps[0m[K[[100;90m..................[0m] / idealTree:container: [7msill[0m [35midealTree[0m buildDeps[0m[K[[107;97m#########[0m[100;90m.........[0m] | idealTree: [32;40mtiming[0m [35midealTree[0m Completed in 1820ms[0m[K[[107;97m##################[0m] - reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] \ reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] | reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] | reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] | reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] | reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] \ reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] - reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] | reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] \ reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] \ reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] - reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] / reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] - reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] \ reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] \ reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] \ reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] - reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] - reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] - reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] - reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] - reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[K[?25h
up to date, audited 342 packages in 5s

18 packages are looking for funding
  run `npm fund` for details

[31m[1m25[22m[39m vulnerabilities (6 [1mlow[22m, 9 [33m[1mmoderate[22m[39m, 10 [31m[1mhigh[22m[39m)

To address issues that do not require attention, run:
  npm audit fix

To address all issues possible (including breaking changes), run:
  npm audit fix --force

Some issues need review, and may require choosing
a different dependency.

Run `npm audit` for details.
[37;40mnpm[0m [0m[30;43mWARN[0m [0m[35mconfig[0m production Use `--omit=dev` instead.
[0m[?25l[[107;97m#########[0m[100;90m.........[0m] \ idealTree: [32;40mtiming[0m [35midealTree[0m Completed in 999ms[0m[K[[107;97m#########[0m[100;90m.........[0m] \ idealTree: [32;40mtiming[0m [35midealTree[0m Completed in 999ms[0m[K[[107;97m#########[0m[100;90m.........[0m] \ idealTree: [32;40mtiming[0m [35midealTree[0m Completed in 999ms[0m[K[[107;97m#########[0m[100;90m.........[0m] | idealTree: [32;40mtiming[0m [35midealTree[0m Completed in 999ms[0m[K[[107;97m##################[0m] \ reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] \ reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] | reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] / reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] / reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] / reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] | reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] - reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] \ reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] | reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] \ reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] - reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] / reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] | reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] \ reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] | reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] | reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] \ reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] \ reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] \ reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] \ reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] \ reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[[107;97m##################[0m] \ reify:@napi-rs/canvas-android-arm64: [32;40mtiming[0m [35mreifyNode:no[0m[K[K[?25h
up to date, audited 342 packages in 5s

18 packages are looking for funding
  run `npm fund` for details

[31m[1m25[22m[39m vulnerabilities (6 [1mlow[22m, 9 [33m[1mmoderate[22m[39m, 10 [31m[1mhigh[22m[39m)

To address issues that do not require attention, run:
  npm audit fix

To address all issues possible (including breaking changes), run:
  npm audit fix --force

Some issues need review, and may require choosing
a different dependency.

Run `npm audit` for details.
/home/container/index.js:8
const = config = require("./config.json");
      ^

SyntaxError: Unexpected token '='
[90m    at internalCompileFunction (node:internal/vm:73:18)[39m
[90m    at wrapSafe (node:internal/modules/cjs/loader:1178:20)[39m
[90m    at Module._compile (node:internal/modules/cjs/loader:1220:27)[39m
[90m    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)[39m
[90m    at Module.load (node:internal/modules/cjs/loader:1119:32)[39m
[90m    at Module._load (node:internal/modules/cjs/loader:960:12)[39m
[90m    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:81:12)[39m
[90m    at node:internal/main/run_main_module:23:47[39m

Node.js v18.16.1